<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_theme"
        android:icon="@drawable/ic_theme"
        android:title="@string/Toggle_theme"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/Profile"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/Logout"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_emergency_recordings"
        android:title="@string/Emergency_recordings"
        android:icon="@drawable/ic_video_placeholder"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_camera_x_test"
        android:title="@string/camera__recording"
        android:icon="@android:drawable/ic_menu_camera"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_voice_detection"
        android:icon="@drawable/ic_mic"
        android:title="@string/voice_detection"
        app:showAsAction="ifRoom"/>

   
       

</menu> 